--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
 
 h2 {
   font-size: 48px;
-  text-align: left !important;
+  text-align: left;
 }
 
 h3 {
@@ -98,4 +98,22 @@ p {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+}
+@media (max-width: 576px) {
+  h1 {
+    font-size: 50px;
+  }
+  h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
+  .launch-links {
+    display: block;
+  }
+  img {
+    display: none;
+  }
 }
